fix align

--- a/src/widgets/ValidatorsStatusCard/validatorsStatusCard.styles.scss
+++ b/src/widgets/ValidatorsStatusCard/validatorsStatusCard.styles.scss
@@ -62,7 +62,6 @@
         }
         .multilayer-percentage-ring {
           flex-wrap: nowrap !important;
-          align-items: start !important;
           .recharts-wrapper {
             align-self: center;
           }
